--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,3 @@
-
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
@@ -9,15 +8,15 @@ tasks:
       AWS_CLI_AUTO_PROMPT: on-partial
     init: |
       cd /workspace
-      curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+      curl -fsSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
-      sudo ./aws/install
+      ./aws/install -i /usr/local/aws-cli -b /usr/local/bin
       cd $THEIA_WORKSPACE_ROOT
+
   - name: postgres
     init: |
-      curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc|sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
-      echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs` -pgdg main" |sudo tee /etc/apt/sources.list.d/pgdg.list
-      sudo apt update
-      sudo apt install -y postgresql-client-13 libpq-dev 
-      
-  
+      curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor -o postgresql.gpg
+      mv postgresql.gpg /etc/apt/trusted.gpg.d/
+      echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" | tee /etc/apt/sources.list.d/pgdg.list
+      apt-get update
+      apt-get install -y postgresql-client-13 libpq-dev
