--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,9 +8,9 @@ tasks:
       AWS_CLI_AUTO_PROMPT: on-partial
     init: |
       cd /workspace
-      curl -fsSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+      curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
-      ./aws/install -i /usr/local/aws-cli -b /usr/local/bin
+      sudo ./aws/install
       cd $THEIA_WORKSPACE_ROOT
 
   - name: postgres
@@ -18,5 +18,5 @@ tasks:
       curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor -o postgresql.gpg
       mv postgresql.gpg /etc/apt/trusted.gpg.d/
       echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" | tee /etc/apt/sources.list.d/pgdg.list
-      apt-get update
-      apt-get install -y postgresql-client-13 libpq-dev
+      sudo apt update
+      sudo apt install -y postgresql-client-13 libpq-dev
