--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,6 +2,8 @@ vscode:
   extensions:
     - 42Crunch.vscode-openapi
 
+    - cweijan.vscode-mysql-client2
+
 tasks:
   - name: aws-cli
     env: 
@@ -19,4 +21,3 @@ tasks:
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
       sudo apt-get update
       sudo apt-get install -y postgresql-client libpq-dev
-
