--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -23,3 +23,16 @@ tasks:
       echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
       sudo apt-get update
       sudo apt-get install -y postgresql-client libpq-dev
+
+ports:
+  - name: frontend
+    port: 3003
+    onOpen: open-browser
+    visibility: public
+  - name: backend
+    port: 4567
+    visibility: public
+  - name: xray-daemon
+    port: 2000
+    visibility: public
+
