--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,6 +13,11 @@ tasks:
       unzip awscliv2.zip
       sudo ./aws/install
       cd $THEIA_WORKSPACE_ROOT
+  
+  - name: frontend-react-js
+    command: |
+      cd frontend-react-js
+      npm i
 
   - name: postgres
     init: |
@@ -32,4 +37,5 @@ ports:
   - name: xray-daemon
     port: 2000
     visibility: public
+
 
