Added new requirements

--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -3,8 +3,10 @@ flask-cors
 
 aws-xray-sdk
 
-opentelemetry-api
-opentelemetry-sdk
-opentelemetry-exporter-otlp-proto-http
-opentelemetry-instrumentation-flask
-opentelemetry-instrumentation-requests
+watchtower
+
+# opentelemetry-api
+# opentelemetry-sdk
+# opentelemetry-exporter-otlp-proto-http
+# opentelemetry-instrumentation-flask
+# opentelemetry-instrumentation-requests
