--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,7 +15,7 @@ tasks:
       cd $THEIA_WORKSPACE_ROOT
   
   - name: frontend-react-js
-    command: |
+    init: |
       cd /frontend-react-js
       npm i
 
