--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,8 +15,8 @@ tasks:
       cd $THEIA_WORKSPACE_ROOT
   
   - name: frontend-react-js
-    init: |
-      cd /frontend-react-js
+    command: |
+      cd frontend-react-js
       npm i
 
   - name: postgres
